Fix missing background image error

--- a/code/ui/StageInfo.scss
+++ b/code/ui/StageInfo.scss
@@ -31,7 +31,7 @@ StageInfo {
             text-shadow: 0 2px 0 rgba(0, 0, 0, 0.2);
 
             &.current-stage {
-                background-image: url(/textures/ui/icon_stage_next.png);
+
             }
         }
 
